[package]
name = "myoj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
sqlx = {version = "0.6.0", default_features = false, features = ["mysql","runtime-tokio-rustls","macros","chrono"]}
env_logger = "0.9.0"
dotenv = "0.15.0"
log = "0.4.17"
serde_json = "1.0.85"
serde = { version = "1.0.144", features = ["derive"] }
lazy_static = "1.4.0"
chrono = "0.4.22"
wait-timeout = "0.2.0"
actix-files = "0.6.2"
mysql = "*"
rand = "0.3.17"

[dev-dependencies]
assert-json-diff = "2.0.2"
lazy_static = "1.4.0"
pretty_assertions = "1.2.1"
serde_json = "1.0.85"
serde = { version = "1.0.144", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
